# sillok

./: .env.example  .gitignore  LICENSE  README.md  data.json  docker-compose.yml  example.md  pyproject.toml  run.sh
api/: Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
api/contracts/: MetaDataStoreContract.sol
api/samples/: CreateUserSample.json
app/: Dockerfile  main.py  pyproject.toml
database/: Dockerfile
ganache/: Dockerfile  README.md  README2.md  docker-compose.yml  entrypoint.sh  index.html  package-lock.json  package.json  truffle-config.js
ganache/data/BCAInetwork/keystore/: UTC--2025-06-17T14-55-30.939118066Z--b81b609e33ff3bcf2f380326af25d85ae51aa281.json
ganache/data/chaindata/: MANIFEST-000004
ganache/data/worldland/: jwtsecret  nodekey  transactions.rlp
ganache/data/worldland/chaindata/: 000002.ldb  LOG
ganache/data/worldland/lightchaindata/: LOG
ganache/data/worldland/nodes/: LOG
ganache/migrations/: 2_deploy_metadata_store_contract.js
nginx/: nginx.conf
samples/: CreateFileSample.json  CreateUserSample.json
tests/: test_restore.py
