[tool.poetry]
name = "Sillok_API"
version = "0.1.0"
description = ""
authors = ["JinwangMok <jinwangmok@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.2.0"
openai = "^1.25.2"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-postgres = "^0.0.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx="^0.27.0"
sqlalchemy = "^2.0.30"
psycopg = "^3.2.2"
pgvector = "^0.2.5"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"